// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`props should render correctly 1`] = `
<ul
  class="wp-components-list css-1xbgqt6"
  data-g2-c16t="true"
  data-g2-component="List"
>
  <li
    class="wp-components-list-item css-q34c1j"
    data-g2-c16t="true"
    data-g2-component="ListItem"
  >
    Warm Hugs
  </li>
</ul>
`;

exports[`props should render ordered list 1`] = `
<ol
  class="wp-components-list css-sqshqu"
  data-g2-c16t="true"
  data-g2-component="List"
>
  <li
    class="wp-components-list-item css-q34c1j"
    data-g2-c16t="true"
    data-g2-component="ListItem"
  >
    Warm Hugs
  </li>
</ol>
`;
